CR: Fix offset product featured h3 on mobile

--- a/plugins/DbeMotion/webroot/css/styles.scss
+++ b/plugins/DbeMotion/webroot/css/styles.scss
@@ -2151,6 +2151,12 @@ header {
           svg {
             width: 24px;
           }
+
+          .subtitle-wrapper {
+            h3 {
+              width: 90%;
+            }
+          }
         }
       }
     }
